// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationSummary renders N/A when all istio components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <div
      className="kiali_fz2k14t"
    >
      No Istio config objects found
    </div>
  }
  enableFlip={true}
  position="auto"
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    N/A
  </div>
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all istio components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 error found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all istio components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        3
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 error found
        </div>
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all services are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Service validation result
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 error found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all services are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Service validation result
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 error found
        </div>
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders success icon when all istio components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ValidationSummary renders success icon when all istio components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        4
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ValidationSummary renders success icon when all services are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Service validation result
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all istio components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all istio components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Istio config objects analyzed: 
        3
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all services are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Service validation result
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all services are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <div
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "left",
          }
        }
      >
        Service validation result
      </div>
      <div
        className="kiali_fstk0tp"
      >
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;
